--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<!doctype <!DOCTYPE html> <html> <head> <meta charset="utf-8"> <meta http-equiv="X-UA-Compatible" content="IE=edge"> <title>Flash Cards</title> <meta name="viewport" content="width=device-width, initial-scale=1"> <link rel="stylesheet" href="597983e3193339a12903fd60ba1e0364.css"> <link rel="stylesheet" href="209120a1db8fe67e47c1b9ab958c49d8.css"></head> <body> <div id="main"></div> <script src="209120a1db8fe67e47c1b9ab958c49d8.js"></script> </body> </html> 
+<!doctype <!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Flash Cards</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="597983e3193339a12903fd60ba1e0364.css">
+</head>
+
+<body>
+  <div id="main"></div>
+  <script src="209120a1db8fe67e47c1b9ab958c49d8.js"></script>
+</body>
+
+</html>
