--- a/index.html
+++ b/index.html
@@ -1,17 +1,1 @@
-<!doctype <!DOCTYPE html>
-<html>
-
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Flash Cards</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/flash-cards/597983e3193339a12903fd60ba1e0364.css">
-</head>
-
-<body>
-  <div id="main"></div>
-  <script src="/flash-cards/209120a1db8fe67e47c1b9ab958c49d8.js"></script>
-</body>
-
-</html>
+<!doctype <!DOCTYPE html> <html> <head> <meta charset="utf-8"> <meta http-equiv="X-UA-Compatible" content="IE=edge"> <title>Flash Cards</title> <meta name="viewport" content="width=device-width, initial-scale=1"> <link rel="stylesheet" href="597983e3193339a12903fd60ba1e0364.css"> <script src="597983e3193339a12903fd60ba1e0364.js"></script></head> <body> <div id="main"></div> <script src="209120a1db8fe67e47c1b9ab958c49d8.js"></script> </body> </html> 
