--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Flash Cards</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="../node_modules/react-quill/dist/quill.snow.css" />
   <link rel="stylesheet" href="./styles.css" />
 </head>
 
