--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8" />
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div id="main"></div>
+  <main id="main"></main>
   <script src="./index.js"></script>
 </body>
 
