--- a/index.html
+++ b/index.html
@@ -1,18 +1,1 @@
-<!doctype <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Flash Cards</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/quill.snow.dc713f73.css">
-  <link rel="stylesheet" href="/styles.ba1e0364.css">
-<script src="/quill.snow.dc713f73.js"></script><script src="/styles.ba1e0364.js"></script></head>
-
-<body>
-  <main id="main"></main>
-  <script src="/src.958c49d8.js"></script>
-</body>
-
-</html>
+<!doctype <!DOCTYPE html> <html lang="en"> <head> <meta charset="utf-8"> <meta http-equiv="X-UA-Compatible" content="IE=edge"> <title>Flash Cards</title> <meta name="viewport" content="width=device-width, initial-scale=1"> <link rel="stylesheet" href="quill.snow.8e478e7f.css"> <link rel="stylesheet" href="styles.8416ad18.css"> <script src="styles.8416ad18.js"></script></head> <body> <main id="main"></main> <script src="src.f7f00c77.js"></script> </body> </html> 
